--- a/.github/workflows/approve.yml
+++ b/.github/workflows/approve.yml
@@ -1,12 +1,10 @@
-name: airdrop-intel-bot
+name: approve-queue
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
-  run:
+  approve:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,13 +18,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run bot
+      - name: Run approve mode
         run: |
           python run_bot.py
         env:
-          MODE: run
+          MODE: approve
           DRY_RUN: ${{ secrets.DRY_RUN }}
-          MAX_POSTS_PER_RUN: ${{ secrets.MAX_POSTS_PER_RUN }}
 
           X_BEARER_TOKEN: ${{ secrets.X_BEARER_TOKEN }}
           X_API_KEY: ${{ secrets.X_API_KEY }}
@@ -34,18 +31,9 @@ jobs:
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}
 
-          KEYWORDS: ${{ secrets.KEYWORDS }}
-          LANG: ${{ secrets.LANG }}
-          RESULTS_PER_RUN: ${{ secrets.RESULTS_PER_RUN }}
-
           MIN_SCORE_VERIFIED: ${{ secrets.MIN_SCORE_VERIFIED }}
           MIN_SCORE_UNVERIFIED: ${{ secrets.MIN_SCORE_UNVERIFIED }}
           QUEUE_MIN_SCORE: ${{ secrets.QUEUE_MIN_SCORE }}
-
-          REQUIRE_HTTPS: ${{ secrets.REQUIRE_HTTPS }}
-          REJECT_SOCIAL_ONLY: ${{ secrets.REJECT_SOCIAL_ONLY }}
-          BLOCK_SHORTENERS: ${{ secrets.BLOCK_SHORTENERS }}
-          ALLOWLIST_DOMAINS: ${{ secrets.ALLOWLIST_DOMAINS }}
 
           ACCOUNT_TAG: ${{ secrets.ACCOUNT_TAG }}
           CARD_TITLE: ${{ secrets.CARD_TITLE }}
@@ -55,17 +43,6 @@ jobs:
           CTA_EVERY_N_POSTS: ${{ secrets.CTA_EVERY_N_POSTS }}
           CTA_TEXT: ${{ secrets.CTA_TEXT }}
 
-          WEEKLY_DIGEST: ${{ secrets.WEEKLY_DIGEST }}
-          WEEKLY_DIGEST_DAY: ${{ secrets.WEEKLY_DIGEST_DAY }}
-
-          SPONSORED_MODE: ${{ secrets.SPONSORED_MODE }}
-          SPONSORED_TITLE: ${{ secrets.SPONSORED_TITLE }}
-          SPONSORED_PROJECT: ${{ secrets.SPONSORED_PROJECT }}
-          SPONSORED_OFFICIAL_URL: ${{ secrets.SPONSORED_OFFICIAL_URL }}
-          SPONSORED_NOTE: ${{ secrets.SPONSORED_NOTE }}
-          SPONSORED_TAG: ${{ secrets.SPONSORED_TAG }}
-
-          AUTO_POST: ${{ secrets.AUTO_POST }}
           ONLY_VERIFIED: ${{ secrets.ONLY_VERIFIED }}
           APPROVE_POST_LIMIT: ${{ secrets.APPROVE_POST_LIMIT }}
 
